Update Panel Admin

--- a/src/app/shared/components/Panel_Admin/crear-vehiculo/crear-vehiculo.component.html
+++ b/src/app/shared/components/Panel_Admin/crear-vehiculo/crear-vehiculo.component.html
@@ -15,7 +15,7 @@
       <small><strong>Modelo:</strong> {{ tipoVehiculoByID.modelo }}</small><br />
       <small><strong>Precio:</strong> {{ tipoVehiculoByID.precio }} €</small>
     </div>
-    <div class="section-divider mt-4"></div>
+    <div class="section-divider"></div>
 
     <div class="form-scroll-area">
       <div class="two-columns">
