Updated form-alquilar UI, now only logged users will be shown the alquilar form, proper data handling - But it doesnt properly adjust to the backend, and the ui still needs some fixes

--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -77,13 +77,18 @@
         <button class="btn-alquilar" (click)="mostrarFormularioReserva()">Alquilar</button>
         <button *ngIf="esAdmin" class="btn-eliminar" (click)="eliminarVehiculo()">Eliminar</button>
       </div>
-      
-      <app-formulario-alquilar 
+        <app-formulario-alquilar 
         [tipoVehiculo]="tipoVehiculo" 
         [vehiculo]="vehiculo" 
         *ngIf="showMostrarReserva" 
         (cerrarModal)="showMostrarReserva = false">
       </app-formulario-alquilar>
+        <app-login 
+        *ngIf="showLoginModal"
+        (closeModal)="cerrarLoginModal()"
+        (loginSuccess)="onLoginSuccess()"
+        (switchToRegister)="cerrarLoginModal()">
+      </app-login>
     </div>
   </div>
 </div>
