--- a/src/app/shared/components/Perfil/perfil-administracion/perfil-administracion.component.html
+++ b/src/app/shared/components/Perfil/perfil-administracion/perfil-administracion.component.html
@@ -1,22 +1,22 @@
 <div *ngIf="esAdmin" class="admin-menu">
   <div class="admin-header">
     <h1 class="admin-title p-3 m-3">Administración de vehículos</h1>
-   <div class="organizer-botones p-2 m-2" >
-    <ul class="lista">
-      <li class="espacio p-2">
-        <button class="admin-add-btn" (click)="abrirAgregarTipoVehiculo()">
-          <i class="bi bi-plus-circle-fill" style="font-size: 2rem"></i>
-          Agregar Tipo Vehículo
-        </button>
-      </li>
-      <li class="espacio p-2">
-        <button class="admin-add-btn" (click)="abrirAgregarVehiculo()">
-          <i class="bi bi-plus-circle-fill" style="font-size: 2rem"></i>
-          Agregar Vehículo
-        </button>
-      </li>
-    </ul>
-  </div>
+    <div class="organizer-botones p-2 m-2">
+      <ul class="lista">
+        <li class="espacio p-2">
+          <button class="admin-add-btn" (click)="abrirAgregarTipoVehiculo()">
+            <i class="bi bi-plus-circle-fill" style="font-size: 2rem"></i>
+            Agregar Tipo Vehículo
+          </button>
+        </li>
+        <li class="espacio p-2">
+          <button class="admin-add-btn" (click)="abrirAgregarVehiculo()">
+            <i class="bi bi-plus-circle-fill" style="font-size: 2rem"></i>
+            Agregar Vehículo
+          </button>
+        </li>
+      </ul>
+    </div>
   </div>
   <!--Agregar modal vehiculo-->
   <!-- *ngIf="mostrarFormulario" -->
@@ -25,185 +25,246 @@
 
 
  (click)="ejecutar()" -->
-
-
-
-
 </div>
-<div class="row  ">
-
+<div class="row">
   <div>
     <div class="card">
       <div class="card-header">
-
-        <button class="btn btn-success m-3"  (click)="rescatarTipoVheculos()">Cargar Tipos Vehículos</button>
+        <button class="btn btn-success m-3" (click)="rescatarTipoVheculos()">
+          Cargar Tipos Vehículos
+        </button>
       </div>
 
-      <div class="card-body ">
-        <form [formGroup]="formUpdate" >
-        <table class="table table-border" >
+      <div class="card-body">
+        <form [formGroup]="formUpdate">
+          <table class="table table-border">
+            <thead>
+              <tr class="tabla-head">
+                <th class="casillas-ext">CONTROL-ELIMINAR</th>
+                <th class="casillas-ext">CONTROL-ACTUALIZAR</th>
 
-          <thead>
-            <tr class="tabla-head">
+                <th class="casillas-ext">ID-REAL</th>
+                <th class="casillas-ext">MARCA</th>
+                <th class="casillas-ext">MODELO</th>
+                <th class="casillas-ext">PRECIO</th>
+                <th class="casillas-ext">TIPO</th>
+                <th class="casillas-ext">IMAGEN</th>
+              </tr>
+            </thead>
 
-              <th class="casillas-ext">CONTROL-ELIMINAR</th>
-              <th class="casillas-ext">CONTROL-ACTUALIZAR</th>
-
-              <th class="casillas-ext">ID-REAL</th>
-              <th class="casillas-ext">MARCA</th>
-              <th class="casillas-ext">MODELO</th>
-              <th class="casillas-ext">PRECIO</th>
-              <th class="casillas-ext">TIPO</th>
-              <th class="casillas-ext">IMAGEN</th>
-              <!-- <th>MATRICULA</th>
-              <th>color</th>
-              <th>kilometraje</th>
-              <th>disponibilidad</th>
-              <th>ubicacion</th>
-              <th>combustible</th>
-              <th>etiqueta</th>
-              <th>autonomia</th>
-              <th>puertas</th>
-              <th>aireAcondicionado</th>
-              <th>plazas</th>
-              <th>transmision</th>
-              <th>reservas</th> -->
-
-            </tr>
-          </thead>
-
-          <tbody>
-
-
+            <tbody>
               @for (tipo of tipoVehiculosList; track $index) {
-                <tr class="tabla-int">
-
-                  <td class="casillas"><button class="btn btn-danger " (click)="eliminarById()">Eliminar</button></td>
-                  <td class="casillas"><button class="btn btn-secondary " (click)="actualizarTipoVheiculo()">Actualizar</button></td>
-                  <td class="casillas">{{tipo.id}}<input  type="number" placeholder="id" formControlName="id"></td>
-                  <td class="casillas">{{tipo.marca}}<input type="text" placeholder="marca" formControlName="marca"></td>
-                  <td class="casillas">{{tipo.modelo}}<input type="text" placeholder="modelo" formControlName="modelo"></td>
-                  <td class="casillas">{{tipo.precio}}<input type="number" placeholder="precio" formControlName="precio"></td>
-                  <td class="casillas">{{tipo.tipo}}<input type="text" placeholder="tipo" formControlName="tipo"></td>
-                  <td class="casillas">{{tipo.imagen}}<input type="text" placeholder="imagen" formControlName="imagen"></td>
-
-                  <!-- @for (item of tipo.vehiculos; track $index) {
-
-                    <td>{{item.matricula}}</td>
-                    <td> {{item.color}}</td>
-                    <td> {{item.kilometraje}}</td>
-                    <td> {{item.disponibilidad}}</td>
-                    <td> {{item.ubicacion}}</td>
-                    <td> {{item.combustible}}</td>
-                    <td> {{item.etiqueta}}</td>
-                    <td> {{item.autonomia}}</td>
-                    <td> {{item.puertas}}</td>
-                    <td> {{item.aireAcondicionado}}</td>
-                    <td> {{item.plazas}}</td>
-                    <td> {{item.transmision}}</td>
-                    <td> {{item.reservas}}</td>
-                  } -->
-
-                </tr>
+              <tr class="tabla-int">
+                <td class="casillas">
+                  <button class="btn btn-danger" (click)="eliminarById()">
+                    Eliminar
+                  </button>
+                </td>
+                <td class="casillas">
+                  <button
+                    class="btn btn-secondary"
+                    (click)="actualizarTipoVheiculo()"
+                  >
+                    Actualizar
+                  </button>
+                </td>
+                <td class="casillas">
+                  {{ tipo.id
+                  }}<input
+                    type="number"
+                    placeholder="id"
+                    formControlName="id"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ tipo.marca
+                  }}<input
+                    type="text"
+                    placeholder="marca"
+                    formControlName="marca"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ tipo.modelo
+                  }}<input
+                    type="text"
+                    placeholder="modelo"
+                    formControlName="modelo"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ tipo.precio
+                  }}<input
+                    type="number"
+                    placeholder="precio"
+                    formControlName="precio"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ tipo.tipo
+                  }}<input
+                    type="text"
+                    placeholder="tipo"
+                    formControlName="tipo"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ tipo.imagen
+                  }}<input
+                    type="text"
+                    placeholder="imagen"
+                    formControlName="imagen"
+                  />
+                </td>
+              </tr>
 
               }
-
-          </tbody>
-
-        </table>
+            </tbody>
+          </table>
         </form>
       </div>
-
     </div>
   </div>
   <div>
     <div class="card">
       <div class="card-header">
-
-        <button class="btn btn-success m-3"  (click)="rescatarVheculos()">Cargar Vehículos</button>
+        <button class="btn btn-success m-3" (click)="rescatarVheculos()">
+          Cargar Vehículos
+        </button>
       </div>
 
-      <div class="card-body ">
-        <form [formGroup]="formUpdateVheiculo" >
-        <table class="table table-border" >
+      <div class="card-body">
+        <form [formGroup]="formUpdateVheiculo">
+          <table class="table table-border">
+            <thead>
+              <tr class="tabla-head">
+                <th class="casillas-ext">CONTROL-ELIMINAR</th>
+                <th class="casillas-ext">CONTROL-ACTUALIZAR</th>
 
-          <thead>
-            <tr class="tabla-head">
+                <th class="casillas-ext">MATRICULA</th>
+                <th class="casillas-ext">UBICACION</th>
+                <th class="casillas-ext">COLOR</th>
+                <th class="casillas-ext">KILOMETRAJE</th>
+                <th class="casillas-ext">DISPONIBILIDAD</th>
+                <th class="casillas-ext">COMBUSTIBLE</th>
+                <th class="casillas-ext">ETIQUETA</th>
+                <th class="casillas-ext">AUTONOMIA</th>
+                <th class="casillas-ext">PUERTAS</th>
+                <th class="casillas-ext">PLAZAS</th>
+                <th class="casillas-ext">TRANSMISION</th>
+                <!-- <th class="casillas-ext">RESERVAS</th> -->
+              </tr>
+            </thead>
 
-              <th class="casillas-ext">CONTROL-ELIMINAR</th>
-              <th class="casillas-ext">CONTROL-ACTUALIZAR</th>
-
-              <th class="casillas-ext">MATRICULA</th>
-               <th class="casillas-ext">UBICACION</th>
-              <th class="casillas-ext">COLOR</th>
-              <th class="casillas-ext">KILOMETRAJE</th>
-              <th class="casillas-ext">DISPONIBILIDAD</th>
-              <th class="casillas-ext">COMBUSTIBLE</th>
-              <th class="casillas-ext">ETIQUETA</th>
-              <th class="casillas-ext">AUTONOMIA</th>
-              <th class="casillas-ext">PUERTAS</th>
-              <th class="casillas-ext">PLAZAS</th>
-              <th class="casillas-ext">TRANSMISION</th>
-              <!-- <th class="casillas-ext">RESERVAS</th> -->
-            </tr>
-          </thead>
-
-          <tbody>
-
-
+            <tbody>
               @for (vheiculo of vehiculosList; track $index) {
-                <tr class="tabla-int">
-
-                  <td class="casillas"><button class="btn btn-danger " (click)="eliminarByIdVehiculo()">Eliminar</button></td>
-                  <td class="casillas"><button class="btn btn-secondary " (click)="actualizarVihiculo()">Actualizar</button></td>
-                  <td class="casillas">{{vheiculo.matricula}}<input  type="text" placeholder="matricula" formControlName="matricula"></td>
-                  <td class="casillas">{{vheiculo.ubicacion}}<input type="text" placeholder="ubicacion" formControlName="ubicacion"></td>
-                  <td class="casillas">{{vheiculo.color}}<input type="text" placeholder="color" formControlName="color"></td>
-                  <td class="casillas">{{vheiculo.kilometraje}}<input type="checkbox" placeholder="disponibilidad" formControlName="disponibilidad"></td>
-                  <td class="casillas">{{vheiculo.disponibilidad}}<input type="text" placeholder="combustible" formControlName="combustible"></td>
-                  <td class="casillas">{{vheiculo.etiqueta}}<input type="text" placeholder="etiqueta" formControlName="etiqueta"></td>
-                  <td class="casillas">{{vheiculo.autonomia}}<input type="number" placeholder="autonomia" formControlName="autonomia"></td>
-                  <td class="casillas">{{vheiculo.aireAcondicionado}}<input type="checkbox" placeholder="aireAcondicionado" formControlName="aireAcondicionado"></td>
-                  <td class="casillas">{{vheiculo.plazas}}<input type="number" placeholder="plazas" formControlName="plazas"></td>
-                  <td class="casillas">{{vheiculo.transmision}}<input type="text" placeholder="transmision" formControlName="transmision"></td>
-
-                  <!-- @for (item of tipo.vehiculos; track $index) {
-
-                    <td>{{item.matricula}}</td>
-                    <td> {{item.color}}</td>
-                    <td> {{item.kilometraje}}</td>
-                    <td> {{item.disponibilidad}}</td>
-                    <td> {{item.ubicacion}}</td>
-                    <td> {{item.combustible}}</td>
-                    <td> {{item.etiqueta}}</td>
-                    <td> {{item.autonomia}}</td>
-                    <td> {{item.puertas}}</td>
-                    <td> {{item.aireAcondicionado}}</td>
-                    <td> {{item.plazas}}</td>
-                    <td> {{item.transmision}}</td>
-                    <td> {{item.reservas}}</td>
-                  } -->
-
-                </tr>
+              <tr class="tabla-int">
+                <td class="casillas">
+                  <button
+                    class="btn btn-danger"
+                    (click)="eliminarByIdVehiculo()"
+                  >
+                    Eliminar
+                  </button>
+                </td>
+                <td class="casillas">
+                  <button
+                    class="btn btn-secondary"
+                    (click)="actualizarVihiculo()"
+                  >
+                    Actualizar
+                  </button>
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.matricula
+                  }}<input
+                    type="text"
+                    placeholder="matricula"
+                    formControlName="matricula"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.ubicacion
+                  }}<input
+                    type="text"
+                    placeholder="ubicacion"
+                    formControlName="ubicacion"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.color
+                  }}<input
+                    type="text"
+                    placeholder="color"
+                    formControlName="color"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.kilometraje
+                  }}<input
+                    type="checkbox"
+                    placeholder="disponibilidad"
+                    formControlName="disponibilidad"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.disponibilidad
+                  }}<input
+                    type="text"
+                    placeholder="combustible"
+                    formControlName="combustible"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.etiqueta
+                  }}<input
+                    type="text"
+                    placeholder="etiqueta"
+                    formControlName="etiqueta"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.autonomia
+                  }}<input
+                    type="number"
+                    placeholder="autonomia"
+                    formControlName="autonomia"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.aireAcondicionado
+                  }}<input
+                    type="checkbox"
+                    placeholder="aireAcondicionado"
+                    formControlName="aireAcondicionado"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.plazas
+                  }}<input
+                    type="number"
+                    placeholder="plazas"
+                    formControlName="plazas"
+                  />
+                </td>
+                <td class="casillas">
+                  {{ vheiculo.transmision
+                  }}<input
+                    type="text"
+                    placeholder="transmision"
+                    formControlName="transmision"
+                  />
+                </td>
+              </tr>
 
               }
-
-          </tbody>
-
-        </table>
+            </tbody>
+          </table>
         </form>
       </div>
-
     </div>
   </div>
-
 </div>
-
-
-
-
-
-
 
 <!-- <div class="vehiculos-grid">
   <div class="vehiculo-card" *ngFor="let veh of vehiculos">
@@ -250,9 +311,10 @@
   </div> -->
 <!-- </div> -->
 
-  <app-creart-tipo-vheiculo-admin
+<app-creart-tipo-vheiculo-admin
   *ngIf="showAgregarModalTipoVheiculo"
-  (closeModal)="cerrarAgregarTipoVehiculo()">
+  (closeModal)="cerrarAgregarTipoVehiculo()"
+>
 </app-creart-tipo-vheiculo-admin>
 <app-editar-vehiculo
   *ngIf="showAgregarModal"
