--- a/src/app/shared/components/Header_Footer/footer/footer.component.html
+++ b/src/app/shared/components/Header_Footer/footer/footer.component.html
@@ -1,5 +1,4 @@
-
-<footer class="footer">
+<footer class="footer" #footer>
   <div class="footer-border"></div>
   <div class="footer-container">
     <!-- Logo y slogan -->
@@ -105,4 +104,4 @@
   <div class="footer-copyright">
     <p>© Copyright KARHUB 2025 | Todos los derechos reservados.</p>
   </div>
-  </footer>
+</footer>
