--- a/src/app/shared/components/Header_Footer/footer/footer.component.html
+++ b/src/app/shared/components/Header_Footer/footer/footer.component.html
@@ -75,7 +75,7 @@
             </a>
           </li>
           <li>
-            <a routerLink="/faq">
+            <a routerLink="/contacto">
               <div class="link-icon"><i class="fas fa-question-circle"></i></div>
               <span>F.A.Q</span>
             </a>
